Change singleton pattern to static class